--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,6 +20,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "jiti": "^2.6.1",
     "openai": "^4.20.1",
     "playwright": "^1.40.1",
     "zod": "^3.22.4"
