--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
+    "@vitest/coverage-v8": "^1.0.4",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3",
     "vitest": "^1.0.4"
