chore(RF-1): add absolute path for prompts

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -24,7 +24,8 @@
       "@utils/*": ["./src/utils/*"],
       "@config/*": ["./src/config/*"],
       "@adapters/*": ["./src/adapters/*"],
-      "@commands/*": ["./src/commands/*"]
+      "@commands/*": ["./src/commands/*"],
+      "@prompts/*": ["./src/prompts/*"]
     }
   },
   "include": ["**/*.ts"],
