--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "turbo": "^1.11.0",
     "typescript": "^5.3.0"
   },
-  "packageManager": "pnpm@10.23.0"
+  "packageManager": "pnpm@10.23.0",
+  "dependencies": {
+    "@toon-format/toon": "^2.0.1"
+  }
 }
