--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "@riflebird/core": "workspace:*",
+    "@types/figlet": "^1.7.0",
     "chalk": "^5.3.0",
     "commander": "^11.1.0",
+    "figlet": "^1.9.4",
     "inquirer": "^9.2.12",
     "ora": "^7.0.1",
     "zod": "^3.25.76"
@@ -36,5 +38,14 @@
     "automation"
   ],
   "author": "Ebubekir Tabak",
-  "license": "MIT"
+  "license": "MIT",
+  "homepage": "https://github.com/ebubekirtabak/riflebird#readme",
+  "bugs": {
+    "url": "https://github.com/ebubekirtabak/riflebird/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ebubekirtabak/riflebird",
+    "directory": "packages/cli"
+  }
 }
