feat(RF-5): add pre-processing security layer for secret detection
- Implement SecretScanner with 16 patterns detecting 13 secret types
- Add standalone patterns for sk-, AKIA, ghp_/gho_/ghs_, etc.
- Integrate sanitization into ProjectFileWalker (file reads)
- Add secondary protection in AI client (LLM messages)
- Create 25 comprehensive tests (21 integration + 4 third-party)
- Add SanitizationLogger for safe logging
- Document edge cases and security considerations
- Support third-party services: SendGrid, Twilio, Stripe, Mailgun

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint -- --fix",
     "publish": "pnpm changeset publish",
-    "prepare": "husky"
+    "prepare": "husky",
+    "pack:local": "pnpm --filter @riflebird/core pack --pack-destination ../../ && pnpm --filter riflebird pack --pack-destination ../../"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
