--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "riflebird",
   "version": "1.0.0",
-  "description": "",
+  "description": "AI-powered test generation and execution framework for unit, integration, E2E, visual, and performance testing",
   "main": "index.js",
   "repository": {
     "type": "git",
