feat(RF-17): add test file type
- export all models

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -20,6 +20,7 @@
       "@riflebird/core": ["index.ts"],
       "@/*": ["src/*"],
       "@models/*": ["src/models/*"],
+      "@models": ["src/models/index.ts"],
       "@helpers/*": ["src/helpers/*"],
       "@utils": ["src/utils/index.ts"],
       "@utils/*": ["src/utils/*"],
