--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -31,7 +31,8 @@
       "@providers/*": ["src/providers/*"],
       "@security/*": ["src/security/*"],
       "@security": ["src/security/index.ts"],
-      "@runners": ["src/runners/index.ts"]
+      "@runners": ["src/runners/index.ts"],
+      "@runners/*": ["src/runners/*"]
     }
   },
   "include": ["src/**/*", "index.ts"],
