--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -32,7 +32,9 @@
       "@security/*": ["src/security/*"],
       "@security": ["src/security/index.ts"],
       "@runners": ["src/runners/index.ts"],
-      "@runners/*": ["src/runners/*"]
+      "@runners/*": ["src/runners/*"],
+      "@types/*": ["src/types/*"],
+      "@types": ["src/types/index.ts"]
     }
   },
   "include": ["src/**/*", "index.ts"],
