feat(RF-26): add agentic runner to resolve test issues

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -34,7 +34,9 @@
       "@runners": ["src/runners/index.ts"],
       "@runners/*": ["src/runners/*"],
       "@types/*": ["src/types/*"],
-      "@types": ["src/types/index.ts"]
+      "@types": ["src/types/index.ts"],
+      "@agentic": ["src/agentic/index.ts"],
+      "@agentic/*": ["src/agentic/*"]
     }
   },
   "include": ["src/**/*", "index.ts"],
