--- a/package.json
+++ b/package.json
@@ -39,7 +39,11 @@
   },
   "lint-staged": {
     "*.{ts,tsx}": [
-      "eslint --fix"
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md,yml,yaml,html,css}": [
+      "prettier --write"
     ]
   },
   "devDependencies": {
@@ -52,6 +56,7 @@
     "eslint-config-prettier": "^10.1.8",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
+    "prettier": "3.7.4",
     "turbo": "^1.11.0",
     "typescript": "^5.3.0",
     "vitest": "^1.6.1"
