--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,7 +27,9 @@
   },
   "devDependencies": {
     "@types/node": "^20.19.27",
+    "@types/tmp": "^0.2.6",
     "@vitest/coverage-v8": "^1.0.4",
+    "tmp": "^0.2.5",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3",
     "vitest": "^1.0.4"
