--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "lint:fix": "turbo run lint -- --fix",
     "publish": "pnpm changeset publish",
     "ci:publish": "pnpm build && pnpm changeset publish",
-    "ci:version": "pnpm changeset version",
+    "ci:version": "HUSKY=0 pnpm changeset version",
     "prepare": "husky",
     "security:audit": "pnpm audit --audit-level=high",
     "security:check": "pnpm dlx license-checker --production"
