--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -19,6 +19,9 @@
     "chalk": "^5.3.0",
     "commander": "^11.1.0",
     "inquirer": "^9.2.12",
+    "jiti": "^2.6.1",
+    "openai": "^4.20.1",
+    "playwright": "^1.40.1",
     "ora": "^7.0.1",
     "zod": "^3.25.76"
   },
