--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.1",
   "description": "AI-powered E2E testing framework - CLI",
   "type": "module",
+  "types": "./dist/index.d.ts",
   "bin": {
     "riflebird": "./dist/index.js"
   },
