fix: add exports to package.json

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -7,6 +7,12 @@
   "bin": {
     "riflebird": "./dist/index.js"
   },
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup",
