--- a/.github/workflows/pr-automation.yml
+++ b/.github/workflows/pr-automation.yml
@@ -139,7 +139,7 @@ jobs:
 
   add-jira-link:
     runs-on: ubuntu-latest
-    if: github.event.action == 'opened' || github.event.action == 'edited'
+    if: github.event.action == 'opened' || github.event.action == 'edited' || github.event.action == 'synchronize'
     steps:
       - uses: actions/github-script@v7
         env:
