--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,45 @@ name: Test
 
 on:
   push:
-    branches: [master, feat/*]
+    branches:
+      [
+        master,
+        dev,
+        feat/*,
+        fix/*,
+        docs/*,
+        style/*,
+        refactor/*,
+        perf/*,
+        test/*,
+        build/*,
+        ci/*,
+        chore/*,
+        revert/*,
+        hotfix/*,
+        release/*,
+        experiment/*,
+      ]
   pull_request:
-    branches: [master, feat/*]
+    branches:
+      [
+        master,
+        dev,
+        feat/*,
+        fix/*,
+        docs/*,
+        style/*,
+        refactor/*,
+        perf/*,
+        test/*,
+        build/*,
+        ci/*,
+        chore/*,
+        revert/*,
+        hotfix/*,
+        release/*,
+        experiment/*,
+      ]
 
 jobs:
   test:
