--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -36,7 +36,9 @@
       "@types/*": ["src/types/*"],
       "@types": ["src/types/index.ts"],
       "@agentic": ["src/agentic/index.ts"],
-      "@agentic/*": ["src/agentic/*"]
+      "@agentic/*": ["src/agentic/*"],
+      "@handlers": ["src/handlers/index.ts"],
+      "@handlers/*": ["src/handlers/*"]
     }
   },
   "include": ["src/**/*", "index.ts"],
