--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -27,6 +27,8 @@
       "@config/*": ["src/config/*"],
       "@adapters/*": ["src/adapters/*"],
       "@commands/*": ["src/commands/*"],
+      "@commons/*": ["src/commons/*"],
+      "@commons": ["src/commons/index.ts"],
       "@prompts/*": ["src/prompts/*"],
       "@providers/*": ["src/providers/*"],
       "@security/*": ["src/security/*"],
