--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,12 +1,12 @@
-name: "CodeQL Analysis"
+name: 'CodeQL Analysis'
 
 on:
   push:
     branches: [master]
   pull_request:
-    branches: [master, feat/*]
+    branches: [master, feat/*, fix/*, docs/*, perf/*, refactor/*, release/*, test/*, chore/*]
   schedule:
-    - cron: '0 0 * * 1'  # Weekly on Monday at midnight UTC
+    - cron: '0 0 * * 1' # Weekly on Monday at midnight UTC
 
 jobs:
   analyze:
@@ -38,4 +38,4 @@ jobs:
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v4
         with:
-          category: "/language:${{matrix.language}}"
+          category: '/language:${{matrix.language}}'
